<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="copyright">© 2015 ansoft</string>
    <string name="app_name">LOADSHEDDING PRO</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_update">Update</string>
    <string name="action_flash">Flash Torch</string>
    <string name="group_number">Group %d</string>

    <string-array name="groups">
        <item>Group 1</item>
        <item>Group 2</item>
        <item>Group 3</item>
        <item>Group 4</item>
        <item>Group 5</item>
        <item>Group 6</item>
        <item>Group 7</item>
    </string-array>
    <string-array name="weekdays">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesda</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="weekdaysChecked">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="months">
        <item>Baisakh</item>
        <item>Jestha</item>
        <item>Asadh</item>
        <item>Shrawan</item>
        <item>Bhadra</item>
        <item>Ashoj</item>
        <item>Kartik</item>
        <item>Mangsir</item>
        <item>Paush</item>
        <item>Magh</item>
        <item>Falgun</item>
        <item>Chaitra</item>
    </string-array>
    <string-array name="weekdaysCheckedShort">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>

    <string name="dayOfWeek0">SU</string>
    <string name="dayOfWeek1">MO</string>
    <string name="dayOfWeek2">TU</string>
    <string name="dayOfWeek3">WE</string>
    <string name="dayOfWeek4">TH</string>
    <string name="dayOfWeek5">FR</string>
    <string name="dayOfWeek6">SA</string>
    <string name="year">%d B.S</string>
    <string name="won">GOES AFTER</string>
    <string name="woff">COMES AFTER</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="from">From : %s</string>
    <string name="total_loadshedding">Total - %1$02d:%2$02d</string>
    <string name="time_format">%1$02d:%2$02d</string>
    <string name="title_activity_flash_tourch">FlashTourchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="mail_subject">Loadshedding Pro Feedback</string>
    <string name="email">abinash.neupane123@gmail.com</string>
    <string name="mailto_chooser_title">Send email...</string>
    <string name="facebook_link">https://www.facebook.com/pages/Loadshedding-Pro/303998146391385</string>
    <string name="action_about">About</string>
    <string name="choose_group">Choose group</string>
    <string name="choose_group_title">Choose your group</string>
    <string name="choose_group_to_share_title">Choose group to share</string>
    <string name="action_more">More</string>
    <string name="settings_time_format">12-hours time format</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_share">Share via SMS</string>
    <string name="update_successful">Schedule was successfully updated</string>
    <string name="update_up_to_date">Schedule is up to date</string>
    <string name="update_failed">Failed to update schedule. Please, check your internet connection</string>
    <string name="torch_not_supported">Your device doesn\'t support torch mode</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_notification_text">Notify for power on/off</string>
    <string name="widget_configuration_title">Select group</string>
    <string name="hourPerWeek">Weekly : %1$02dh %2$02dm</string>
    <string name="settings_autoupdate">Auto Update</string>
    <string name="settings_notificatin_time">Notification time</string>
    <string name="settings_general">General</string>

    <string-array name="settings_notification_time">
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>20 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>60 min</item>
        <item>90 min</item>
        <item>120 min</item>
        <item>180 min</item>
    </string-array>
    <string-array name="settings_notification_time_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>180</item>
    </string-array>

    <string name="search_hint">Search group eg. Baidam</string>
    <string name="action_search_group">Search Group</string>
    <string name="action_complain">Complain</string>
    <string name="search_group_title">SEARCH GROUP</string>
    <string name="search_group_subtitle">समुह छनौट</string>
    <string name="complain_title">COMPLAIN</string>
    <string name="complain_subtitle">गुनासो तथा जानकारी</string>

</resources>
