<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Home">

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_action_menu"
        android:title="@string/action_more"
        android:orderInCategory="100"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_debug"
                android:title="->> Debug"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:visible="false"/>
            <item
                android:id="@+id/action_update"
                android:title="@string/action_update"
                android:orderInCategory="100"
                android:showAsAction="never"/>
            <item
                android:id="@+id/action_update_group"
                android:title="@string/choose_group"
                android:orderInCategory="100"
                android:showAsAction="never"/>
            <item
                android:id="@+id/action_search_group"
                android:title="@string/action_search_group"
                android:orderInCategory="100"
                android:showAsAction="never"/>
            <item
                android:id="@+id/action_complain"
                android:title="@string/action_complain"
                android:orderInCategory="100"
                android:showAsAction="never"/>
            <item
                android:id="@+id/action_share"
                android:title="@string/action_share"
                android:orderInCategory="100"
                android:showAsAction="never"/>
            <item
                android:id="@+id/action_flash"
                android:title="@string/action_flash"
                android:orderInCategory="100"
                android:showAsAction="never"/>
            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings"
                android:orderInCategory="100"
                android:showAsAction="never"/>
            <item
                android:id="@+id/action_about"
                android:title="@string/action_about"
                android:orderInCategory="100"
                android:showAsAction="never"/>
        </menu>
    </item>
</menu>
